--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
   </section>
 
-  <footer class="bg-dark text-white">
+  <footer class="bg-dark text-white mt-5">
     <div class="container pt-4">
       <div class="row">
         <div class="col-md-3 col-6">
