--- a/local.html
+++ b/local.html
@@ -106,15 +106,61 @@
       </div>
     </div>
 
-    
-    
+  </section>
 
+  <section class="container">
+    <div class="text-center my-5">
+      <span class="h6 d-block">DESCUBRA O QUE ACONTECE NA CIDADE</span>
+      <h1 class="display-4 text-primary">Próximos eventos</h1>
+    </div>
+    <table class="table table-hover table-responsive-md">
+      <thead>
+        <tr>
+          <th scope="col">Data</th>
+          <th scope="col">Evento</th>
+          <th scope="col">Local</th>
+          <th scope="col">Ticket</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">23/10</th>
+          <td>Julien Baker</td>
+          <td>The Academy</td>
+          <td><a class="btn btn-outline-secondary btn-sm" href="Comprar ticket">Comprar ticket</a></td>
+        </tr>
+        <tr>
+          <th scope="row">24/10</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td><a class="btn btn-outline-secondary btn-sm" href="Comprar ticket">Comprar ticket</a></td>
+        </tr>
+        <tr>
+          <th scope="row">25/10</th>
+          <td>Larry the Bird</td>
+          <td>Thornton</td>
+          <td><a class="btn btn-outline-secondary btn-sm" href="Comprar ticket">Comprar ticket</a></td>
+        </tr>
+        <tr>
+          <th scope="row">27/10</th>
+          <td>Bon Iver</td>
+          <td>Olympia</td>
+          <td><a class="btn btn-outline-secondary btn-sm" href="Comprar ticket">Comprar ticket</a></td>
+        </tr>
+        <tr>
+          <th scope="row">29/10</th>
+          <td>Lucy Rose</td>
+          <td>Olympia</td>
+          <td><a class="btn btn-outline-secondary btn-sm" href="Comprar ticket">Comprar ticket</a></td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
 
 
 
-  <footer class="bg-dark text-white">
+  <footer class="bg-dark text-white mt-5">
     <div class="container pt-4">
       <div class="row">
         <div class="col-md-3 col-6">
