--- a/local.html
+++ b/local.html
@@ -47,7 +47,7 @@
   <!-- FECHA MODAL -->
 
   <nav class="box-shadow navbar navbar-expand-md px-4 navbar-light bg-light fixed-top py-3">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img src="img/caravan.svg" alt="caravan">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
