--- a/inscricao.html
+++ b/inscricao.html
@@ -125,11 +125,115 @@
             </select>
           </div>
           <div class="mb-3 col-md-3 col-6">
-            <label for="inputCep">Cep</label>
-            <input type="text" class="form-control" id="inputCep" placeholder="xxxxxx-xxx">
+            <label for="inputCidade">Cep</label>
+            <input type="text" class="form-control" id="inputCidade" placeholder="xxxxxx-xxx">
           </div>
         </div>
+
+        <div class="bg-light rounded box-shadow p-3 mb-3">
+          <h2 class="h6 text-primary">FORMA DE PAGAMENTO</h2>
+          <nav class="nav btn-group mb-3" id="formaPagamento" role="tablist">
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary btn-sm active" id="nav-cartao-tab" data-bs-toggle="tab"
+                data-bs-target="#nav-cartao" type="button" role="tab" aria-controls="nav-cartao"
+                aria-selected="true">Cartão de Crédito</button>
+
+              <button type="button" class="btn btn-secondary btn-sm" id="nav-boleto-tab" data-bs-toggle="tab"
+                data-bs-target="#nav-boleto" type="button" role="tab" aria-controls="nav-boleto"
+                aria-selected="false">Boleto Bancário</button>
+
+            </div>
+          </nav>
+
+          <div class="tab-content" id="formaPagamentoConteudo">
+            <div class="tab-pane fade show active" id="nav-cartao" role="tabpanel" aria-labelledby="nav-cartao-tab">
+              <div class="row">
+                <div class="mb-3 col-md-6">
+                  <label for="inputNomeCartao">Nome no Cartão</label>
+                  <input type="text" class="form-control" id="inputCidade" placeholder="Nome impresso no cartão">
+                </div>
+                <div class="mb-3 col-md-3 col-6">
+                  <label for="inputMes">Mês</label>
+                  <select id="inputMes" class="form-control">
+                    <option value="0">Expira mês...</option>
+                    <option value="1">01</option>
+                    <option value="2">02</option>
+                    <option value="3">03</option>
+                    <option value="4">04</option>
+                    <option value="5">05</option>
+                  </select>
+                </div>
+                <div class="mb-3 col-md-3 col-6">
+                  <label for="inputAno">Ano</label>
+                  <select id="inputAno" class="form-control">
+                    <option value="0">Expira ano...</option>
+                    <option value="1">2017</option>
+                    <option value="2">2018</option>
+                    <option value="3">2019</option>
+                    <option value="4">2020</option>
+                    <option value="5">2021</option>
+                  </select>
+                </div>
+                <div class="mb-3 col-md-6">
+                  <label for="inputNomeCartao">Número no Cartão</label>
+                  <input type="text" class="form-control" id="inputNumeroCartao" placeholder="5555 5555 5555 5555">
+                </div>
+                <div class="mb-3 col-md-6">
+                  <label for="inputCodigo">Código de segurança</label>
+                  <input type="text" class="form-control" id="inputCodigo" placeholder="xxx">
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="nav-boleto" role="tabpanel" aria-labelledby="nav-boleto-tab">
+              <p class="lead">
+                Clique em contratar plano que enviaremos um boleto para o seu e-mail.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-check mb-3">
+          <label for="">
+            <input type="checkbox" class="form-check-input">Concordo com os <a href="#">Termos e Condições</a>
+          </label>
+        </div>
+
+        <button type="submit" class="btn btn-primary">
+          Contratar Plano
+        </button>
+
       </form>
+
+      <div class="col-lg-5 mx-auto mb-5 order-first order-lg-1">
+        <h2 class="h6 text-primary">PLANO ESCOLHIDO</h2>
+        <div class="col-md mb-5">
+          <div class="bg-light rounded p-4 box-shadow">
+            <h2>Gold</h2>
+            <ul class="lista-plano list-unstyled">
+              <li>→ 30 dias de viagem</li>
+              <li>→ 3 destinos diferentes</li>
+              <li>→ Tudo pago pela empresa</li>
+              <li>→ Ingressos para festas</li>
+            </ul>
+            <form>
+              <div class="form-group">
+                  <select class="form-select bg-light" id="inputCidade">
+                    <option selected>Selecione a cidade</option>
+                    <option value="1">Califórnia</option>
+                    <option value="2">Paris</option>
+                    <option value="3">Dublin</option>
+                  </select>
+              </div>
+            </form>
+            <div class="row mt-4">
+              <div class="col">
+                <span class="h4">R$5.000</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
