aprendendo a usar tooltip

--- a/planos.html
+++ b/planos.html
@@ -94,19 +94,20 @@
         <div class="bg-light rounded p-4 box-shadow">
           <h2>Gold</h2>
           <ul class="lista-plano list-unstyled">
-            <li>→ 30 dias de viagem</li>
+            <li><span data-bs-toggle="tooltip" data-bs-placement="top" title="Isso mesmo, 30 dias">→ 30 dias de
+                viagem</span></li>
             <li>→ 3 destinos diferentes</li>
             <li>→ Tudo pago pela empresa</li>
             <li>→ Ingressos para festas</li>
           </ul>
           <form>
             <div class="form-group">
-                <select class="form-select bg-light" id="inputCidade">
-                  <option selected>Selecione a cidade</option>
-                  <option value="1">Califórnia</option>
-                  <option value="2">Paris</option>
-                  <option value="3">Dublin</option>
-                </select>
+              <select class="form-select bg-light" id="inputCidade">
+                <option selected>Selecione a cidade</option>
+                <option value="1">Califórnia</option>
+                <option value="2">Paris</option>
+                <option value="3">Dublin</option>
+              </select>
             </div>
           </form>
           <div class="row mt-4 align-items-center">
@@ -130,12 +131,12 @@
           </ul>
           <form>
             <div class="form-group">
-                <select class="form-select bg-light" id="inputCidade">
-                  <option selected>Selecione a cidade</option>
-                  <option value="1">Califórnia</option>
-                  <option value="2">Paris</option>
-                  <option value="3">Dublin</option>
-                </select>
+              <select class="form-select bg-light" id="inputCidade">
+                <option selected>Selecione a cidade</option>
+                <option value="1">Califórnia</option>
+                <option value="2">Paris</option>
+                <option value="3">Dublin</option>
+              </select>
             </div>
           </form>
           <div class="row mt-4 align-items-center">
@@ -148,8 +149,8 @@
           </div>
         </div>
       </div>
-        </div>
-      </div>
+    </div>
+    </div>
     </div>
   </section>
 
@@ -228,7 +229,7 @@
     </div>
   </footer>
 
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
   <script type="text/javascript" src="/js/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="/js/popper.min.js"></script>
   <script type="text/javascript" src="/js/bootstrap.js"></script>
