--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section class="container-fluid">
     <div class="row bg-dark text-white">
       <div class="col-lg-7 p-0">
-        <div id="carouselCidades" class="carousel slide">
+        <div id="carouselCidades" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
